tests/baselines/reference/parserComputedPropertyName38.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName38.ts(2,5): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName38.ts (1 errors) ====
    class C {
        [public]() { }
        ~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }